# 0l-signals

./: Dockerfile  README.md  main.py  models.py  proposals.json  proposals.py  pyproject.toml
web/: index.css  index.html  index.js  proposal.html  proposal.js
web/components/: bn-card.js  bn-footer.js  bn-hero.js  bn-nav.js  index.js
