[tool.poetry]
name = "0l-signal"
version = "0.1.0"
description = ""
authors = ["Nour <1257310+nourspace@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
aiofiles = "^23.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
